--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Lenovo\\anaconda3\\python.exe"
+    "python.pythonPath": "D:\\Soft\\Anaconda3\\python.exe"
 }
